2006-08-11  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GlyphView.java
	(DefaultGlyphPainter.modelToView): Fixed model->view mapping.
	* javax/swing/text/LabelView.java
	(valid): New flag indicating if the text attributes are valid.
	(LabelView): Initialize valid field with false.
	(setPropertiesFromAttributes): Call setter methods instead
	of setting properties directly. Set valid to true.
	(changedUpdate): Invalidate attributes. Call super.
	(getBackground): Sync attributes if necessary.
	(getForeground): Sync attributes if necessary.
	(getFont): Sync attributes if necessary.
	(isUnderline): Sync attributes if necessary.
	(isSuperscript): Sync attributes if necessary.
	(isStrikeThrough): Sync attributes if necessary.
	(getFontMetrics): Sync attributes if necessary. Fetch font metrics
	from toolkit if Container is not available yet.

2006-08-11  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/PlainView.java
	(tabBase): New field.
	(tabSize): New field.
	(updateMetrics): Update tabSize.
	(lineToRect): Only allocate when really necessary.
	(modelToView): Use tabBase for offset calculations.
	(paint): Only allocate when really necessary. Update tabBase.
	(nextTabStop): Fixed tab calculation.
	(viewToModel): Correctly handle multiline text and locations
	outside the view's bounds. Set bias.
	(getLineLength): Use tabBase.
	* javax/swing/text/Utilities.java
	(drawTabbedText): Don't special case newlines. The views
	must take care of this.

2006-08-11  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/GapContent.java
	(UndoPosRef): New inner class. Used for resetting positions
	after undo/redo operations.
	(InsertUndo.positions): New field.
	(InsertUndo.undo): Store positions in removed range.
	(InsertUndo.redo): Restore positions in re-inserted range.
	(UndoRemove.positions): New field.
	(UndoRemove.UndoRemove): Store positions in removed range.
	(UndoRemove.undo): Restore positions in re-inserted range.